add gc types